--- a/aula-02.html
+++ b/aula-02.html
@@ -48,14 +48,14 @@
 
                 <!-- ==== EXPLICAÇÃO ==== -->
                 <div class="explanation">
-                    Aqui utilizamos o "<span class="strong-span">v-if</span>" ou o "<span
+                    Foi utilizado o "<span class="strong-span">v-if</span>" ou o "<span
                         class="strong-span">v-else</span>" para criar condições.<br>
                     Neste exemplo caso as horas sejam <span class="strong-span">menores</span> que 12h, imprimirá a
-                    mensagem de "<span class="strong-span">Bom dia!</span>". <br><br>
+                    mensagem de "<span class="strong-span">Bom dia!</span>". <br>
 
                     Caso sejam <span class="strong-span">maiores</span> que 12h ou <span
                         class="strong-span">menores</span> que 18h imprimirá a mensagem de "<span
-                        class="strong-span">Boa tarde!</span>". <br><br>
+                        class="strong-span">Boa tarde!</span>". <br>
 
                     Ou se forem <span class="strong-span">maiores</span> que 18h imprimirá a mensagem de "<span
                         class="strong-span">Boa noite!</span>".
@@ -95,8 +95,8 @@
         var app = new Vue({
             el: ".app",
             data: {
-                title: "Aula 02 - Vuejs do jeito ninja!",
-                description: "O que são diretivas no Vue-js?",
+                title: "Aula 02 - Vue.js do jeito ninja!",
+                description: "O que são diretivas no Vue.js?",
                 good_morning: "Bom dia!",
                 good_afternoon: "Boa tarde!",
                 good_night: "Boa noite!",
