--- a/aula-04.html
+++ b/aula-04.html
@@ -47,9 +47,9 @@
 
                 <!-- ==== EXPLICAÇÃO ==== -->
                 <div class="explanation">
-                    Aqui usamos o <span class="strong-span">v-model</span> para trabalhar com a reatividade do <span
-                        class="strong-span">Vue-js</span> deixando formulários mais dinâmicos. Tudo que for escrito nos
-                    <span class="strong-span">inputs</span> ou escolhidas nos <span class="strong-span">checkbox</span>
+                    Aqui foi usado o "<span class="strong-span">v-model</span>" para trabalhar com a reatividade do <span
+                        class="strong-span">Vue.js</span>, deixando formulários mais dinâmicos. Tudo que for escrito nos
+                    <span class="strong-span">inputs</span> ou escolhido nos <span class="strong-span">checkbox</span>
                     será imprimido a baixo, veja:
                     <div class="d-flex mt-1">
                         <span class="strong-span">Seu nome:</span><span class="ms-1">{{name}}</span>
@@ -115,8 +115,8 @@
         var app = new Vue({
             el: ".app",
             data: {
-                title: "Aula 04 - Vue-js do jeito ninja!",
-                description: " Vue-js diretiva v-model, interligando formulários e dados",
+                title: "Aula 04 - Vue.js do jeito ninja!",
+                description: "Diretiva v-model, interligando formulários e dados",
                 name: "",
                 email: "",
                 preference: ""
