--- a/aula-05.html
+++ b/aula-05.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ==== TITLE ==== -->
-    <title>Aula 03 - Vue-js do jeito ninja!</title>
+    <title>Aula 05 - Vue-js do jeito ninja!</title>
 
     <!-- ==== FAVICON ==== -->
     <link rel="shortcut icon" href="images/icons/logo-favicon.png" type="image/x-icon">
@@ -48,7 +48,7 @@
 
                 <!-- ==== EXPLICAÇÃO ==== -->
                 <div class="explanation">
-                    Aqui foi usado o "<span class="strong-span">v-bind</span>", onde podemos salvar caminhos de imagens ou qualquer atributo de <span class="strong-span">HTML</span>, no exemplo abaixo foi usado uma imagem. <br>
+                    Aqui foi usado o "<span class="strong-span">v-bind</span>", onde pode salvar caminhos de imagens ou qualquer atributo de <span class="strong-span">HTML</span>, no exemplo abaixo foi usado uma imagem. <br>
                     Utilização : (<span class="strong-span">v-bind:src="image"</span>) ou (<span class="strong-span">:src="image"</span>)
                 </div>
 
@@ -67,8 +67,8 @@
         var app = new Vue({ 
             el: ".app",
             data: {
-                title: "Aula 05 - Vue-js do jeito ninja!",
-                description: " Vue-js diretiva v-bind, atribuindo valor às tags html",
+                title: "Aula 05 - Vue.js do jeito ninja!",
+                description: "Diretiva v-bind, atribuindo valor às tags html",
                 image: "images/features/Aula-05-Exemplo-BG.jpg"
             }
         });
