--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 
                 <!-- ==== EXPLICAÇÃO ==== -->
                 <div class="explanation">
-                    Aqui fazemos a instancia do Vue-js, onde o atribuímos a uma variável chamada "<span
-                        class="strong-span">app</span>", onde também criamps uma variável chamada "<span
-                        class="strong-span">el</span>" que será o elemento onde iremos trabalhar. <br>
-                    Logo em seguida criamos um "<span class="strong-span">array</span>" chamado "<span
-                        class="strong-span">data</span>" onde salvamos o nosso titulo e subtitulo para imprimi-los na
-                    tela.
+                    Aqui foi feita a instância do <span class="strong-span">Vue.js</span>, onde o atribuímos a
+                    variável "<span class="strong-span">app</span>". <br>
+                    Foi criada também uma variável chamada "<span class="strong-span">el</span>" que será o elemento
+                    onde
+                    o <span class="strong-span">Vue.js</span> irá atuar. <br>
+                    Foi criado um "<span class="strong-span">array [data]</span>" onde foi definido o titulo e
+                    subtitulo a cima.
                     <div class="explanation-code">
                         <img src="images/features/Aula-01-1.jpg" alt="Aula 01 Code">
                     </div>
@@ -68,8 +69,8 @@
         var app = new Vue({
             el: ".app",
             data: {
-                title: "Aula 01 - Vue-js do jeito ninja!",
-                description: "Conhecendo o Vue-js"
+                title: "Aula 01 - Vue.js do jeito ninja!",
+                description: "Conhecendo o Vue.js"
             }
         });
     </script>
