--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
                     Foi criado um "<span class="strong-span">array [data]</span>" onde foi definido o titulo e
                     subtitulo a cima.
                     <div class="explanation-code">
-                        <img src="images/features/Aula-01-1.jpg" alt="Aula 01 Code">
+                        <article class="flex-100">
+                            <span class="strong-span">Instância do Vue.js</span> <br>
+                            <span class="count-line">1</span>
+                            <span class="text-primary">var</span> app <span class="text-danger">= new</span> <span class="text-success">Vue</span> ({ <br>
+                            <span class="count-line">2</span>&nbsp;&nbsp;el: <span class="text-warning">".app"</span>,<br>
+                            <span class="count-line">3</span>&nbsp;&nbsp;data: {<br>
+                            <span class="count-line">4</span>&nbsp;&nbsp;&nbsp;&nbsp;title: <span class="text-warning">"Aula 01 - Vue.js do jeito ninja!"</span>,<br>
+                            <span class="count-line">5</span>&nbsp;&nbsp;&nbsp;&nbsp;description: <span class="text-warning">"Conhecendo o Vue.js"</span><br>
+                            <span class="count-line">6</span>&nbsp;&nbsp;}<br>
+                            <span class="count-line">7</span>});
+                        </article>
                     </div>
                 </div>
             </div>
